Bug 1838246 - Return true directly in GetSubscriptionResultRunnable::WorkerRun when Worker is shutting down. r=asuth, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D183860